@@ -1,3 +1,13 @@
+2003-02-21  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/gnome.c (GNOME_SetClientList):
+	fixed compile problem
+
+	* fvwm/move_resize.c (get_outline_rects):
+	(draw_move_resize_grid):
+	initial drawing and final undrawing of wire frame no longer toggles the
+	pixel in the top left corner of the screen
+
 2003-02-13  olicha  <olivier.chapuis@free.fr>
 
 	* fvwm/gnome.c (GNOME_SetClientList):
